k3s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: x-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: x-frontend
  template:
    metadata:
      labels:
        app: x-frontend
    spec:
      containers:
        - name: x-frontend
          image: jeanmichelbb/twc-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: x-frontend
spec:
  selector:
    app: x-frontend
  ports:
    - port: 3000
      targetPort: 3000
